--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--? minz-->
 <!doctype html>
 <html class="no-js" lang="">
 <head>
@@ -14,22 +15,22 @@
     <input type="submit" placeholder="Add Food">
   </form>
   <div id="foodsList">
-    <script id="foodsListTemplate" type="text/template">
+    <script class="foodListTemplate" type="text/template">
       <span><%= title %></span> <span><%= calorie %></span> <button class="delete">Delete</button>
     </script>
   </div>
-  <div id="totalCalories"></div>
+  <div id="total"></div>
 
   <script src="js/jquery-3.1.0.min.js"></script>
   <script src="js/underscore-min.js"></script>
   <script src="js/backbone-min.js"></script>
   <script src="js/backbone.localStorage-min.js"></script>
-  <script src="js/helpers/helpers.js"></script>
-  <script src="js/models/food.js"></script>
-  <script src="js/collections/foods.js"></script>
-  <script src="js/views/foodView.js"></script>
-  <script src="js/views/foodsView.js"></script>
-  <script src="js/views/searchView.js"></script>
+  <!--<script src="js/helpers/helpers.js"></script>-->
+  <!--<script src="js/models/food.js"></script>-->
+  <!--<script src="js/collections/foods.js"></script>-->
+  <!--<script src="js/views/foodView.js"></script>-->
+  <!--<script src="js/views/foodsView.js"></script>-->
+  <!--<script src="js/views/searchView.js"></script>-->
   <script src="js/app.js"></script>
 </body>
 </html>
