Implement save to local storage and ajax error alert

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       <h4>Selected Food</h4>
       <!--see notes-->
       <div class="foodList">
+        <span id="searchAlert">No food selected.</span>
         <script id="foodListTemplate" type="text/template">
           <span class="searchName"><%= title %></span>
           <span class="searchCalories"><%= calories %> Calories </span>
