--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!--? minz-->
 <!doctype html>
 <html class="no-js" lang="">
 <head>
@@ -7,70 +6,70 @@
   <title>Health Tracker</title>
   <!-- ?? <meta name="description" content=""> -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  <h1>Health Tracker</h1>
-  <section class="sectionInfo">
-    <div>
-      <section class="sectionSearch">
-        <p>Enter food name then click "Add food" button</p>
-        <form action="" class="searchForm">
-          <input type="text" id="searchBox" class="searchBox" placeholder="Type food here">
-          <button type="submit" id="searchButton" class="searchButton">Search</button>
-          <span id="searchBoxAlert" class="searchBoxAlert"></span>
+  <div id="header">
+    <h1>Health Tracker</h1>
+  </div>
+  <div class="foodInfo">
+    <div class="container">
+      <p><strong>1. Enter food name to search.</strong></p>
+      <p><strong>2. Click "Add food" button.</strong></p>
+      <div class= "row">
+        <div id="searches" class="col-md-4">
+            <h3>Food Search</h3>
+            <form action="" class="searchForm">
+              <input type="text" id="searchBox" class="searchBox" placeholder="Type food here">
+              <button type="submit" id="searchButton" class="searchButton">Search</button>
+              <span id="searchBoxAlert" class="searchBoxAlert"></span>
+              <!--see notes-->
+            </form>
+            <ul class="searchResults"></ul>
+        </div>
+        <div id="selection" class="col-md-4">
+          <div id="addItem">
+            <h3>Food Selection</h3>
+            <div>
+              <h4>Food Name</h4>
+              <div id="foodName">none</div>
+            </div>
+            <div>
+              <h4>Food Calories</h4>
+              <div id="foodCalorie">none</div>
+            </div>
+            <br>
+            <div>
+              <button id="itemSubmit" class="foodSubmitBtn" disabled>Add food</button>
+            </div>
+          </div>
+          <h4>Selected Food</h4>
           <!--see notes-->
-        </form>
-        <h2>Search Results</h2>
-        <ul class="searchResults"></ul>
-      </section>
-    </div>
-    <div>
-      <div id="addItem">
-        <h2>Food Selection</h2>
-        <div>
-          <h4>Food Name</h4>
-          <div id="foodName">none</div>
+          <span id="searchAlert" class="searchBoxAlert">No food selections</span>
+          <div class="foodsList">
+            <script id="foodListTemplate" type="text/template">
+              <span class="searchName"><%= name %></span>
+              <span class="searchCalories"><%= calories %> Calories </span>
+              <span class="delete">Delete</span>
+            </script>
+          </div>
         </div>
-        <div>
-          <h4>Food Calories</h4>
-          <div id="foodCalorie">none</div>
-        </div>
-        <br>
-        <div>
-          <button id="itemSubmit" class="foodSubmitBtn" disabled>Add food</button>
+        <div id="calories" class="col-md-4">
+          <h3>Total Calories</h3>
+          <div id="totCals" class="totCals"></div>
         </div>
       </div>
-      <h4>Selected Food</h4>
-      <!--see notes-->
-      <span id="searchAlert" class="searchBoxAlert">No food selections</span>
-      <div class="foodsList">
-        <script id="foodListTemplate" type="text/template">
-          <span class="searchName"><%= name %></span>
-          <span class="searchCalories"><%= calories %> Calories </span>
-          <span class="delete">Delete</span>
-        </script>
-      </div>
-    </div>
-  </section>
-
-  <section>
-    <h1>Total Calories</h1>
-    <div id="totCals"></div>
-    <!--<div>Calories</div>-->
-  </section>
-
-
   <script src="js/jquery-3.1.0.min.js"></script>
   <script src="js/underscore-min.js"></script>
   <script src="js/backbone-min.js"></script>
   <script src="js/backbone.localStorage-min.js"></script>
-  <!--<script src="js/helpers/helpers.js"></script>-->
-  <!--<script src="js/models/food.js"></script>-->
-  <!--<script src="js/collections/foods.js"></script>-->
-  <!--<script src="js/views/foodView.js"></script>-->
-  <!--<script src="js/views/foodsView.js"></script>-->
-  <!--<script src="js/views/searchView.js"></script>-->
+  <script src="js/helpers/helpers.js"></script>
+  <script src="js/models/food.js"></script>
+  <script src="js/collections/foods.js"></script>
+  <script src="js/views/foodView.js"></script>
+  <script src="js/views/foodsView.js"></script>
+  <script src="js/views/searchView.js"></script>
   <script src="js/app.js"></script>
 </body>
 </html>
