Complete structure, functionality and design

--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
   </div>
   <div class="foodInfo">
     <div class="container">
-      <p><strong>1. Enter food name to search.</strong></p>
-      <p><strong>2. Click "Add food" button.</strong></p>
       <div class= "row">
         <div id="searches" class="col-md-4">
             <h3>Food Search</h3>
+            <p><strong>Enter food name to search.</strong></p>
             <form action="" class="searchForm">
               <input type="text" id="searchBox" class="searchBox" placeholder="Type food here">
               <button type="submit" id="searchButton" class="searchButton">Search</button>
@@ -31,6 +30,7 @@
         <div id="selection" class="col-md-4">
           <div id="addItem">
             <h3>Food Selection</h3>
+            <p><strong>Click "Add food" button.</strong></p>
             <div>
               <h4>Food Name</h4>
               <div id="foodName">none</div>
