--- a/index.html
+++ b/index.html
@@ -11,26 +11,28 @@
 </head>
 <body>
   <div id="header">
-    <h1>Health Tracker</h1>
+    <h1>Health Tracker 123</h1>
   </div>
   <div class="foodInfo">
     <div class="container">
       <div class= "row">
         <div id="searches" class="col-md-4">
             <h3>Food Search</h3>
-            <p><strong>Enter food name to search.</strong></p>
+            <p>1. <strong>Enter</strong> food name to search.</p>
             <form action="" class="searchForm">
               <input type="text" id="searchBox" class="searchBox" placeholder="Type food here">
               <button type="submit" id="searchButton" class="searchButton">Search</button>
               <span id="searchBoxAlert" class="searchBoxAlert"></span>
               <!--see notes-->
             </form>
+            <br>
+            <p>2. <strong>Click</strong> food name to select.</p>
             <ul class="searchResults"></ul>
         </div>
         <div id="selection" class="col-md-4">
           <div id="addItem">
             <h3>Food Selection</h3>
-            <p><strong>Click "Add food" button.</strong></p>
+            <p>3. <strong>Click</strong> "Add food" button.</p>
             <div>
               <h4>Food Name</h4>
               <div id="foodName">none</div>
