Add bootstrap files and update content

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Health Tracker</title>
-  <!-- ?? <meta name="description" content=""> -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <!-- Bootstrap -->
+  <link href="css//bootstrap.min.css" rel="stylesheet" media="screen">
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -66,6 +66,7 @@
   <script src="js/underscore-min.js"></script>
   <script src="js/backbone-min.js"></script>
   <script src="js/backbone.localStorage-min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
   <script src="js/helpers/helpers.js"></script>
   <script src="js/models/food.js"></script>
   <script src="js/collections/foods.js"></script>
