--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
   <script src="js/backbone-min.js"></script>
   <script src="js/backbone.localStorage-min.js"></script>
   <script src="js/bootstrap.min.js"></script>
-  <script src="js/helpers/helpers.js"></script>
-  <script src="js/models/food.js"></script>
-  <script src="js/collections/foods.js"></script>
-  <script src="js/views/foodView.js"></script>
-  <script src="js/views/foodsView.js"></script>
-  <script src="js/views/searchView.js"></script>
-  <script src="js/app.js"></script>
+  <script src="js/helpers/helpers.min.js"></script>
+  <script src="js/models/food.min.js"></script>
+  <script src="js/collections/foods.min.js"></script>
+  <script src="js/views/foodView.min.js"></script>
+  <script src="js/views/foodsView.min.js"></script>
+  <script src="js/views/searchView.min.js"></script>
+  <script src="js/app.min.js"></script>
 </body>
 </html>
