Add separate source and production directories

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>Health Tracker</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Bootstrap -->
-  <link href="css//bootstrap.min.css" rel="stylesheet" media="screen">
-  <link rel="stylesheet" href="css/main.css">
+  <link href="dist/css/bootstrap.min.css" rel="stylesheet" media="screen">
+  <link rel="stylesheet" href="dist/css/main.css">
 </head>
 <body>
   <div id="header">
@@ -62,17 +62,17 @@
           <div id="totCals" class="totCals"></div>
         </div>
       </div>
-  <script src="js/jquery-3.1.0.min.js"></script>
-  <script src="js/underscore-min.js"></script>
-  <script src="js/backbone-min.js"></script>
-  <script src="js/backbone.localStorage-min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/helpers/helpers.min.js"></script>
-  <script src="js/models/food.min.js"></script>
-  <script src="js/collections/foods.min.js"></script>
-  <script src="js/views/foodView.min.js"></script>
-  <script src="js/views/foodsView.min.js"></script>
-  <script src="js/views/searchView.min.js"></script>
-  <script src="js/app.min.js"></script>
+  <script src="dist/js/jquery-3.1.0.min.js"></script>
+  <script src="dist/js/underscore-min.js"></script>
+  <script src="dist/js/backbone-min.js"></script>
+  <script src="dist/js/backbone.localStorage-min.js"></script>
+  <script src="dist/js/bootstrap.min.js"></script>
+  <script src="dist/js/helpers/helpers.min.js"></script>
+  <script src="dist/js/models/food.min.js"></script>
+  <script src="dist/js/collections/foods.min.js"></script>
+  <script src="dist/js/views/foodView.min.js"></script>
+  <script src="dist/js/views/foodsView.min.js"></script>
+  <script src="dist/js/views/searchView.min.js"></script>
+  <script src="dist/js/app.min.js"></script>
 </body>
 </html>
