--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Health Tracker</title>
+  <title>HealthTracker123</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Bootstrap -->
   <link href="dist/css/bootstrap.min.css" rel="stylesheet" media="screen">
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div id="header">
-    <h1>Health Tracker 123</h1>
+    <h1>HealthTracker123</h1>
   </div>
   <div class="foodInfo">
     <div class="container">
